# K-sIO

./: Cargo.toml  README.md
calculator-ui/: index.html  package-lock.json  package.json
calculator-ui/src/: App.css  App.tsx  bindings.ts
calculator-ui/src-tauri/: Cargo.toml  tauri.conf.json
calculator-ui/src-tauri/src/: main.rs
calculator-ui/src/components/: BasicMode.tsx  CalcBtn.tsx  MathDisplay.tsx  basicMode.tsx
calculator-ui/src/utils/: toLatex.ts
src/: ast.rs  context.rs  error.rs  evaluator.rs  functions.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs
tests/: integration_tests.rs
