[package]
name = "K-sIO"
version = "0.1.0"
description = "A Calculator application built with Tauri"
authors = ["Diego Díaz Mendaña <"]
license = "GNU General Public License v3.0"
repository = "https://github.com/Mendana/K-sIO"
edition = "2024"
rust-version = "1.85.0"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"

matheval = { path = "../../" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
